fixed whatIDo section content visibility

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -42,7 +42,7 @@
 .what-content {
   width: 450px;
   height: 33%;
-  min-height: 50%;
+  min-height: 54%;
   transition: 0.5s;
   /* border: 0.5px dashed rgba(255, 255, 255, 0.3); */
   position: relative;
@@ -52,7 +52,7 @@
 
 .what-noTouch:hover,
 .what-content-active {
-  min-height: 67%;
+  min-height: 74%;
   padding: 40px 50px;
 }
 
